# xc2bit

./: Cargo.toml  README.md  build.rs
src/: bitstream.rs  crbit.rs  extra_bits.rs  fb.rs  global_bits_code.rs  global_fuses.rs  io.rs  jed.rs  lib.rs  mc.rs  partdb.rs  tiles.ods  zia.rs
src/enums/: clk-div.txt  global-term.txt  io-fb.txt  io-ibuf-mode.txt  io-oe.txt  io-regcom.txt  io-slew.txt  io-voltage.txt  mc-clk-src.txt  mc-fb.txt  mc-ff-mode.txt  mc-r-src.txt  mc-s-src.txt  mc-xor-mode.txt  security.txt
src/zia/: table.rs
