[package]
name = "xc2bit"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "serde"]
std = [
    "alloc",
    "bitvec/std",
    "jedec/std",
    "serde?/std",
    "dep:bittwiddler-textfile",
]
alloc = [
    "bittwiddler-core/alloc",
    "bitvec/alloc",
    "jedec/alloc",
    "serde?/alloc",
]
serde = ["dep:serde", "serde/derive"]

[dependencies]
bittwiddler-core = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-core", default-features = false }
bittwiddler-macros = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-macros" }
bittwiddler-textfile = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-textfile", optional = true }
bitvec = { version = "1.0", default-features = false }
serde = { version = "1", optional = true, default-features = false }
jedec = { path = "../rust-jedec", default-features = false }

[build-dependencies]
bittwiddler-dsl = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-dsl" }
