[package]
name = "xc2bit"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "serde"]
std = [
    "alloc",
    "bitvec/std",
    "jedec/std",
    "serde?/std",
    "dep:bittwiddler-textfile",
]
alloc = [
    "bittwiddler-core/alloc",
    "bitvec/alloc",
    "jedec/alloc",
    "serde?/alloc",
]
serde = ["dep:serde", "serde/derive"]

[dependencies]
bittwiddler-core = { path = "../bitstream-spreadsheet-dsl/bittwiddler-core", default-features = false }
bittwiddler-macros = { path = "../bitstream-spreadsheet-dsl/bittwiddler-macros" }
bittwiddler-textfile = { path = "../bitstream-spreadsheet-dsl/bittwiddler-textfile", optional = true }
bitvec = { version = "1.0", default-features = false }
serde = { version = "1", optional = true, default-features = false }
jedec = { path = "../rust-jedec", default-features = false }

[build-dependencies]
bittwiddler-dsl = { path = "../bitstream-spreadsheet-dsl/bittwiddler-dsl" }
